--- a/word.html
+++ b/word.html
@@ -47,7 +47,7 @@
         <p>I am so proud of you and everything you do.</p>
         <p>Know that I will always support you, in every step of your journey.</p>
         <p class="love">I love you so much! ❤</p>
-        <img src="https://i.imgur.com/O5qP9tC.png" alt="Bouquet of Flowers">
+        <img src="https://imgur.com/gallery/little-bouquet-n7Viqcr#/t/flower_bouquet" alt="Bouquet of Flowers">
     </div>
 </body>
 </html>
